common-tools opt